Bug 408733 - No anti-aliasing option for Continuous Selection Tool
Summary: No anti-aliasing option for Continuous Selection Tool
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-15 11:59 UTC by Tiar
Modified: 2019-06-20 10:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2019-06-15 11:59:22 UTC
SUMMARY
Looks like vector/pixel mode for Selection Tools is a global option (just like anti-aliasing). The problem is, Continuous and Similar Color Selection Tools are assumed to work in only the pixel mode (hence no switch of modes in Tool Options). If the tool is in the vector mode, there is no anti-aliasing. Hence if you turn on vector mode in Rectangle Tool (or just get it turned on because this is now default), there is no anti-aliasing option in Continuous Selection Tool and Similar Colors Selection Tool. There is no way to change it in Tool Options for those tools.


STEPS TO REPRODUCE
1. Make sure the Rectangle Selection Tool has "vector" mode on.
2. Select Continuous Selection Tool and observe Tool Options.
3. Go to Rectangle Selection Tool and turn on "pixel" mode.
4. Select Continuous Selection Tool and observe Tool Options.

OBSERVED RESULT
In 2., you see no anti-aliasing checkbox. In 4., you see an anti-aliasing checkbox clearly.

EXPECTED RESULT
The checkbox should be there in both cases. Those tools should be always in the pixel mode.


ADDITIONAL INFORMATION
Looks like the selection created by those tools is a pixel selection. I don't know if it's anti-aliased or not.


SOFTWARE/OS VERSIONS
Linux Mint 4.15.0-45-generic
Qt Version: 5.12.3
4.2.1 appimage
Comment 1 Tiar 2019-06-19 09:41:19 UTC
Git commit 080e298f54a9d8524b60e213fafe6bd128a86e16 by Agata Cacko.
Committed on 19/06/2019 at 09:40.
Pushed by tymond into branch 'master'.

Fix Contiguous sel. tool no checkbox for AA

Before this commit there was an issue when other selection tools
had vector selections mode checked. In vector selections mode,
there is no anti-aliasing, so the checkbox is hidden. The problem is,
similar color selection tool and contiguous color selection tool are
pixel-only, so they don't care about vector selections mode being
checked.

Moreover similar color selection tool doesn't use AA checkbox.

This commit ensures that checkbox is visible always on contiguous
selection tool, never on similar color selection tool and only in pixel
selection mode in other tools.

M  +11   -0    libs/ui/tool/kis_tool_select_base.h
M  +6    -0    libs/ui/widgets/kis_selection_options.cc
M  +1    -0    libs/ui/widgets/kis_selection_options.h
M  +0    -1    plugins/tools/selectiontools/kis_tool_select_contiguous.cc
M  +2    -0    plugins/tools/selectiontools/kis_tool_select_contiguous.h
M  +7    -1    plugins/tools/selectiontools/kis_tool_select_similar.cc
M  +1    -0    plugins/tools/selectiontools/kis_tool_select_similar.h

https://invent.kde.org/kde/krita/commit/080e298f54a9d8524b60e213fafe6bd128a86e16
Comment 2 Halla Rempt 2019-06-20 10:49:28 UTC
Git commit 0a2ed07da31e22bcc2691d06e8247e666b8a8d5f by Boudewijn Rempt, on behalf of Agata Cacko.
Committed on 20/06/2019 at 10:32.
Pushed by rempt into branch 'krita/4.2'.

Fix Contiguous sel. tool no checkbox for AA

Before this commit there was an issue when other selection tools
had vector selections mode checked. In vector selections mode,
there is no anti-aliasing, so the checkbox is hidden. The problem is,
similar color selection tool and contiguous color selection tool are
pixel-only, so they don't care about vector selections mode being
checked.

Moreover similar color selection tool doesn't use AA checkbox.

This commit ensures that checkbox is visible always on contiguous
selection tool, never on similar color selection tool and only in pixel
selection mode in other tools.

M  +11   -0    libs/ui/tool/kis_tool_select_base.h
M  +6    -0    libs/ui/widgets/kis_selection_options.cc
M  +1    -0    libs/ui/widgets/kis_selection_options.h
M  +0    -1    plugins/tools/selectiontools/kis_tool_select_contiguous.cc
M  +2    -0    plugins/tools/selectiontools/kis_tool_select_contiguous.h
M  +7    -1    plugins/tools/selectiontools/kis_tool_select_similar.cc
M  +1    -0    plugins/tools/selectiontools/kis_tool_select_similar.h

https://invent.kde.org/kde/krita/commit/0a2ed07da31e22bcc2691d06e8247e666b8a8d5f