Fix Contiguous sel. tool no checkbox for AA

Before this commit there was an issue when other selection tools
had vector selections mode checked. In vector selections mode,
there is no anti-aliasing, so the checkbox is hidden. The problem is,
similar color selection tool and contiguous color selection tool are
pixel-only, so they don't care about vector selections mode being
checked.

Moreover similar color selection tool doesn't use AA checkbox.

This commit ensures that checkbox is visible always on contiguous
selection tool, never on similar color selection tool and only in pixel
selection mode in other tools.

BUG:408733